--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(libcz7ip)
 
 set(INCLUDE_DIR include)
 
-set(lib7zip_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendor/lib7zip/include)
-set(lib7zip_LIB ${CMAKE_CURRENT_SOURCE_DIR}/vendor/lib7zip/lib/lib7zip.a)
+set(lib7zip_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/vendor/lib7zip/Lib7Zip)
+add_subdirectory(vendor/lib7zip)
 
 include_directories(
   ${INCLUDE_DIR}
@@ -21,16 +21,17 @@ set (SOURCES
 
 add_library(c7zip SHARED ${SOURCES})
 
-target_compile_options(c7zip PRIVATE -Wall -Wno-missing-braces -std=c++11)
+target_compile_options(c7zip PRIVATE -Wall -Wno-missing-braces -std=c++11 -fPIC)
 
-target_link_libraries(c7zip ${lib7zip_LIB})
+add_dependencies(c7zip 7zip)
+target_link_libraries(c7zip 7zip)
 
 if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
     target_link_libraries(c7zip -ldl)
 endif() # Linux
 
 if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
-    target_link_libraries(c7zip -lole32 -loleaut32 -luuid)
+    target_link_libraries(c7zip ole32 oleaut32 uuid)
 endif() # Windows
 
 set (SAMPLE_SOURCES
